[FIX] Use design system variable for post spacing

--- a/apps/blog_web/assets/css/components/post.css
+++ b/apps/blog_web/assets/css/components/post.css
@@ -17,7 +17,7 @@
   }
 
   section:has(.posts-list)>p {
-    margin-block-start: 1lh;
+    margin-block-start: var(--space-line);
     margin-block-end: 0;
     color: var(--color-fg-secondary);
   }
